# SAM2-Distillation-Pipeline

./: .gitignore  AGENTS.md  pyproject.toml  requirements-edgetam.txt  requirements-sam31-stage1.txt  requirements-stage1.txt
configs/edgetam/: README.md  smoke_defaults.yaml  tinyvit_video_distill_smoke.yaml
configs/sam2_task/: tv21_sav_progressive.yaml
docs/: SAM2-Distillation-Plan.md  company_auth_hf_wandb.md  company_davis_mask_finetune.md  company_raw_sav_benchmark.md  company_sav000_005_epoch_timing.md  company_sav000_tinyvit_image_encoder_1h100.md  company_sav_formal_image_encoder_run.md  edgetam_reproduction_status.md  edgetam_tinyvit_pipeline.md
docs/experiments/: all_experiment_report.md  backbone_task_expansion_v2.md  edgetam_fidelity_v3.md  edgetam_memory_ablation_v1.md  edgetam_memory_recovery_v2.md  edgetam_smoke.md  edgetam_tinyvit21_behavior_v4.md  key_results_2026-07-21.md  tinyvit_max_jf_v1.md
docs/stage1/: coco_pilot_2xh100.md  company_sav_group_staging.md  company_stage1_recovery_allocation.md  company_stage1_run_recovery.md  company_stage1_setup.md  large_scale_mse_8xh100.md  repvit_sam21l_distillation.md  sa1b_hf_online_teacher_tinyvit21m.md  sam31_ablation_3x4h100.md  sam31_tinyvit21_company.md  sav_mount_recovery.md  sav_stage1_ablation_v2.md
docs/stage2/: sam2_mask_finetune_ablation_v1.md  sam2_mask_finetune_ablation_v2.md  sam2_task_finetune_3stage.md  sam2_task_finetune_v2.md
sam2_distill/: __init__.py
sam2_distill/data/: __init__.py  sav_task_dataset.py
sam2_distill/edgetam/: __init__.py  compat.py  config.py  teacher_features.py  (+3 more)
(+143 files in other folders)
