[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sam2-distill"
version = "0.1.0"
description = "SAM2 and EdgeTAM distillation utilities."
requires-python = ">=3.10"
dependencies = []

[tool.setuptools.packages.find]
include = ["sam2_distill*"]

